src/mapping2_ws/log/build_2023-11-16_11-18-23/my_py_pkg/stderr.log
  File "/home/remon/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/1py_node.py", line 14
    self.get_logger().info('hello' str(self.counter))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

